# skill_pool

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  catalog-info.yaml  deny.toml  flake.nix  mkdocs.yml  openapi.yaml
.github/: dependabot.yml
.sqlx/: query-01350bc6ee816fa681b6720af51c734c172907d0d642eae3db07edd5e9c196e7.json  query-01f1cef318d75529675f5d2dfeaeb0bc7a70a4237c90b8b76e9a467ef27331b3.json  query-04e81e1d0b16f7dc44307e8f7450503670a1d617961b08785068ce3bfc7d7791.json  query-05975d65d7923796d40ad14fad4ecb4ec48afd73aee0597b7ecad34fe48bf8ed.json  query-05fcc70ca556bf5ffb9fb1f79029be84424c2b81c688392b862d5a077cbcd603.json  query-06f1e9fdb795f35fcf98cf5c9bfc43929d6208053359343dfbd7672942c670ce.json  query-07ec36b47322cf0e1d9cad7cab9a0521156e0c8cae6b6accc5a5acd852e2168c.json  query-09a0b910c350e10781592348307f8c04106ae05f8fd438d2b0c8d4d3b5ae6167.json  query-0ae9ca11068640a655f48418688bbfb8cf89515e7bad669d6cbc6c04153918b7.json  query-0e5e999d386b94e825e918832d59df576fe149d737c843dd596a4cf62b0031b5.json  query-122a5cbab882349ba933685bf67f8178683b328217c3b9809a41cdad10e9c76a.json  query-158fbbf856bca46b79dc6b8adfffce9acddb79b172c03fd9d0e332f5e4be9638.json  query-1648f07761bc65061891696b2fb3e2e5250503ecb905a405358025435905ca4a.json  query-1be15532c7b495928ee5d936193aceefb22443f413d4a6a26a85e73d2123f51c.json  query-1c1b6f4a35cdf5901ab7b3888d71ef7353012f333aeca7a6fb7f0fd476465784.json  query-1f783aa386ddfcf979fd9b078708711e26d10588a1c609ed664dd51cafe75406.json  query-235fcd56fabe64355062bacba9b794cefbf72d1f6b137c601849471810ff2647.json  query-23c12e9781c71699d67a79acb491702be33948044d61b08e4e48db54de6d6cbe.json  query-2439dd95453bc75cdfa08a873d692b4a9f447c2230e3ddb6a8362619c3339abf.json  query-27a17c6995ec3c6ce17ef098f0186ce651817fd129daf822ff4cb06a1d98eeb9.json  query-2ab5caf74df92d45f60eb186af237c1b4090e88e51873994717ed24e10c866e9.json  query-2b18d3883a120214cb8037791b57445566c064010e865115652761a0803b9da5.json  query-2b3e71cbeff2d32cc09e98cbcb04b42a30af87fb9d25f9c48284aceeb4c856d4.json  query-2d50fa1a10873d8993d14f1246691fb618c7b987562f9fc2a35393fc42c7a1d7.json  query-2f86f3b6675a04af07dedf44e02b55a5f09191bdfb913ffc119b853f7d14109a.json  query-31e04f0bfa18d1a6ddae34faec36631f4bd065924fbe2c86f3c320c6e5ec446b.json  query-3306a9810196b14f3dca0454062808129ad6e33079e9879ed8eac4abb9d30817.json  query-33d06eedf9d30bdd96bd03cd9e9af7e5652a97e4db96b3e4c8bc3efabe8261f1.json  query-37b3dbfe310fecbbb62c7b3876591b6abe2086fec0c62316897abbf475f0ae45.json  query-399d0316c62c03cfa2399b4dafa87fbb13c1ebfc4522d0e39cef95b3b4743e87.json  query-3c5cf7b6e0c3641f2275c589256e08f6e458521f6f967153d989fe37e3b888fc.json  query-3d9e3f9f1131f4eb8c8a78cfb037ac8d7100223ef94cf22bad931a2542c5aea6.json  query-3dd59d422770bb487188d572d46d2319c24ac1903906dd5d737b2e0bcdbdd687.json  query-3f37f8793ec3e251ba2940cfaad8e6435baf97621de243a648c72b9d899d2ad8.json  (+125 more)
cli/: Cargo.toml
cli/src/: anthropic.rs  banner.rs  capturer.rs  client.rs  config.rs  detect.rs  git.rs  install.rs  lib.rs  main.rs  manifest.rs  notify.rs  scorer.rs  secret_scan.rs
cli/src/cmd/: add.rs  bootstrap.rs  capture.rs  capture_queue.rs  capture_run.rs  capture_score.rs  capture_status.rs  detect.rs  direnv_install.rs  doctor.rs  ensure.rs  hook_install.rs  init.rs  login.rs  mod.rs  plan.rs  plugin.rs  project.rs  publish.rs  search.rs
cli/tests/: ensure_plugin_dedup.rs  ensure_with_plugins.rs  plugin_add.rs  plugin_marketplace_url.rs  plugin_publish.rs
cli/tests/common/: mod.rs
direnv/: use_skill_pool.sh
docs/: a11y-testing.md  api.md  index.md  (+20 more)
server/: Caddyfile  Cargo.toml  Dockerfile  compose.yaml
server/migrations/: 0001_init.sql  0002_tenant_theme.sql  0003_oidc.sql  0004_saml.sql  0005_scim.sql  0006_role_mappings.sql  0007_stack_mappings.sql  0008_skill_drafts.sql  0009_embeddings.sql  0010_notifications.sql  0011_skill_usage.sql  0012_skill_dependencies.sql  0013_skill_usage_events.sql  0014_email_notifications.sql  0015_catalog_item_kind.sql  0016_footer_branding.sql  0017_audit_siem.sql  0018_tenant_data_residency.sql  0019_tenant_session_policy.sql  0020_tenant_theme_logo.sql  0021_tenant_email_branding.sql  0022_tenant_custom_domains.sql  0023_tenant_banner.sql  0023_tenant_theme_favicon_font.sql  0025_tenant_custom_css.sql  0026_tenant_rate_limits.sql  0027_archive_candidate_status.sql  0028_token_prefix.sql  0029_tenant_projects.sql  0030_tenant_project_plans.sql  0031_plugins.sql  0032_plugin_marketplace_entries.sql  0033_tenant_project_items_kind_plugin.sql  0034_plugin_mirror.sql  0035_plugins_unique_excluding_archived.sql
server/src/: admin.rs  audit.rs  auth.rs  bundle.rs  cache.rs  config.rs  css_sanitize.rs  email_branding.rs  embedding.rs  error.rs  git_sync.rs  lib.rs  logo_sanitize.rs  main.rs  metrics.rs  notify.rs  plugin.rs  plugin_git.rs  queue.rs  rate_limit.rs  state.rs  storage.rs  telemetry.rs  tenant.rs  tracing_setup.rs  worker.rs
server/src/jobs/: mod.rs  plugin_mirror.rs
server/src/routes/: audit_siem.rs  bootstrap.rs  custom_domains.rs  decay.rs  drafts.rs  email_branding.rs  enterprise.rs  health.rs  marketplace.rs  mcp.rs  members.rs  mod.rs  notifications.rs  og.rs  oidc.rs  plugin_git.rs  plugin_import.rs  plugins.rs  profile.rs  project_plans.rs  projects.rs  saml.rs  scim.rs  session_policy.rs  skills.rs  sso_admin.rs  stack_mappings.rs  theme.rs  usage.rs
server/tests/: backfill_embeddings.rs  banner.rs  bootstrap.rs  bootstrap_with_plugins.rs  catalog_kinds.rs  custom_css.rs  custom_domains.rs  data_residency.rs  decay.rs  dedicated_mode.rs  dependencies.rs  draft_edit.rs  drafts.rs  email_branding.rs  email_notifications.rs  embedding_dedup.rs  health.rs  integration.rs  marketplace_json.rs  marketplace_public_read.rs  mcp.rs  metrics.rs  notifications.rs  og_image.rs  plugin_cycle_detection.rs  plugin_git_clone.rs  plugin_git_idempotent.rs  plugin_mirror.rs  plugin_mirror_failure.rs  plugin_mirror_refresh.rs  plugin_publish.rs  plugin_schema.rs  plugin_validate.rs  profile_tokens.rs  project_plans.rs  projects_api.rs  queue.rs  rate_limit_plugins.rs  rate_limits.rs  redis_cache.rs  (+13 more)
(+234 files in other folders)
