[package]
name = "skill-pool-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "skill-pool CLI — install, search, publish Claude Code skills"

[[bin]]
name = "skill-pool"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
toml = "0.8"
directories = "5"
tar = "0.4"
flate2 = "1"
walkdir = "2"
rpassword = "7"
serde_yaml = "0.9"
bytes = "1"
unicode-segmentation = "1"

[dev-dependencies]
tempfile = "3"
