[package]
name = "skill-pool-cli"
version = "0.2.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "skill-pool CLI — install, search, publish Claude Code skills"

[lib]
name = "skill_pool_cli"
path = "src/lib.rs"

[[bin]]
name = "skill-pool"
path = "src/main.rs"

# Long-lived daemon variant of `skill-pool capture-run`. Shares the same
# pipeline code via the `skill_pool_cli` lib; the single-shot `capture-run`
# subcommand keeps working for cron/timer drivers.
[[bin]]
name = "skill-pool-capturer"
path = "src/bin/skill-pool-capturer.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
toml = "0.8"
directories = "5"
tar = "0.4"
flate2 = "1"
walkdir = "2"
rpassword = "7"
serde_yaml = "0.9"
bytes = "1"
unicode-segmentation = "1"
regex = "1"
# SHA-256 of the project root for the anonymised `project_hash` in
# CLI-driven usage events (#7 lifecycle). The hash is truncated
# client-side; the server doesn't try to reverse it.
sha2 = "0.11"
hex = "0.4"
# Desktop notifications for the capturer pipeline. On Linux this goes
# through libdbus / org.freedesktop.Notifications; on macOS through the
# NSUserNotification API. Headless / no-DBUS environments degrade to a
# no-op (see `notify::should_emit`).
notify-rust = "4"

[dev-dependencies]
tempfile = "3"
