[package]
name = "skill-pool-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "skill-pool registry HTTP server (multi-tenant)"

[[bin]]
name = "skill-pool-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
url.workspace = true

axum = { version = "0.8", features = ["multipart", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "limit", "compression-br"] }
hyper = "1"

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate",
] }

opendal = { version = "0.55", default-features = false, features = ["services-fs", "services-s3"] }

sha2 = "0.10"
hex = "0.4"
rand = "0.8"

config = { version = "0.15", default-features = false, features = ["toml", "json"] }
figment = { version = "0.10", features = ["env", "toml"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
