[package]
name = "skill-pool-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "skill-pool registry HTTP server (multi-tenant)"

[lib]
name = "skill_pool_server"
path = "src/lib.rs"

[[bin]]
name = "skill-pool-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
url.workspace = true

axum = { version = "0.8", features = ["multipart", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "limit", "compression-br"] }
hyper = "1"

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate",
] }

opendal = { version = "0.55", default-features = false, features = ["services-fs", "services-s3"] }

sha2 = "0.10"
hex = "0.4"
rand = "0.8"

serde_yaml = "0.9"
tar = "0.4"
flate2 = "1"
bytes = "1"
mime = "0.3"
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
openidconnect = "3"
hmac = "0.12"
base64 = "0.22"
urlencoding = "2"
async-trait = "0.1"
samael = { version = "0.0.20", features = ["xmlsec"] }
quick-xml = "0.36"

config = { version = "0.15", default-features = false, features = ["toml", "json"] }
figment = { version = "0.10", features = ["env", "toml"] }

# Phase 5 — embedding-based dedup. Off by default so default builds and CI
# don't pull in ONNX Runtime or HuggingFace network access. Operators that
# want dedup build with `--features fastembed`.
fastembed = { version = "4", optional = true }

[features]
default = []
fastembed = ["dep:fastembed"]

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
