[package]
name = "skill-pool-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "skill-pool registry HTTP server (multi-tenant)"

[lib]
name = "skill_pool_server"
path = "src/lib.rs"

[[bin]]
name = "skill-pool-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
url.workspace = true

axum = { version = "0.8", features = ["multipart", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "limit", "compression-br"] }
hyper = "1"

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate",
] }

opendal = { version = "0.55", default-features = false, features = ["services-fs", "services-s3"] }

sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Redis client for the read-through caches (theme + per-request auth)
# and the rate-limiter shipped in parallel. `connection-manager` gives
# us a single shared client with auto-reconnect; `tokio-rustls-comp`
# pulls in `tls-rustls` + the tokio adapter so `rediss://` URLs work
# without OpenSSL (consistent with sqlx + reqwest above).
redis = { version = "0.27", default-features = false, features = [
    "tokio-comp",
    "tokio-rustls-comp",
    "connection-manager",
    "tls-rustls-webpki-roots",
    # `Script` (Lua EVAL/EVALSHA wrapper) for the queue's atomic
    # dequeue-with-lease op (#10 §D).
    "script",
] }

# AES-256-GCM for at-rest encryption of per-tenant SMTP passwords
# (tenant_email_branding.smtp_password_enc). Key from env
# SKILL_POOL_EMAIL_SECRET_KEY (32 raw bytes, hex-encoded).
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }

serde_yaml = "0.9"
tar = "0.4"
flate2 = "1"
bytes = "1"
mime = "0.3"
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
openidconnect = "4"
hmac = "0.12"
base64 = "0.22"
urlencoding = "2"
async-trait = "0.1"
samael = { version = "0.0.20", features = ["xmlsec"] }
quick-xml = "0.36"

config = { version = "0.15", default-features = false, features = ["toml", "json"] }
figment = { version = "0.10", features = ["env", "toml"] }

# Outbound HTTP for curator webhook delivery (Phase 5 notifications).
# Already used as a dev-dep for integration tests; promoted to a runtime
# dep so the `notify` module can ship POSTs.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# SMTP delivery for email notifications. Async + rustls keeps us off
# OpenSSL; smtp-transport + builder give us the message-building API.
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
    "hostname",
] }

# DNS TXT resolver for custom-domain verification (`_skill-pool-verify.<host>`).
# `tokio-runtime` aligns it with the rest of the async runtime; `system-config`
# reads `/etc/resolv.conf` so it Just Works on a Linux host. No-default-features
# keeps OpenSSL out of the dep tree.
hickory-resolver = { version = "0.24", default-features = false, features = [
    "tokio-runtime",
    "system-config",
] }

# Prometheus exposition format. The `process` feature adds OS-level metrics
# (CPU, memory, FDs) which are useful but pull in extra deps; keep it optional
# so the default build stays lean. `protobuf` is not needed — we serve the
# text exposition format (0.0.4) only.
prometheus = { version = "0.13", default-features = false }

# Phase 5 — embedding-based dedup. Off by default so default builds and CI
# don't pull in ONNX Runtime or HuggingFace network access. Operators that
# want dedup build with `--features fastembed`.
fastembed = { version = "4", optional = true }

# Redis client for the per-tenant rate-limiter (#8 §L20). Sister-agent A
# owns the connection lifecycle in `cache.rs`; this dep is the underlying
# OTLP distributed tracing — opt-in via `--features otlp`.
# Versions are pinned together because opentelemetry, opentelemetry_sdk,
# opentelemetry-otlp, and tracing-opentelemetry must share the same
# opentelemetry major version (0.32).
# tracing-opentelemetry 0.32.1 requires opentelemetry 0.31.x — all four crates
# must share the same opentelemetry major version.
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["rt-tokio", "trace"], optional = true }
# http-proto + reqwest-rustls: protobuf-over-HTTP transport with rustls — no OpenSSL required.
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["http-proto", "reqwest-rustls", "trace"], optional = true }
tracing-opentelemetry = { version = "0.33", optional = true }

[features]
default = []
fastembed = ["dep:fastembed"]
otlp = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
testcontainers = "0.24"
testcontainers-modules = { version = "0.11", features = ["postgres", "redis"] }
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
walkdir = "2"
